[package]
name = "rsshub-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"] }
rss = "2.0.4"
scraper = "0.16.0"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
